<resources>
    <string name="app_name">SP Browser</string>
    <string name="img2pdf_content">Image to be converted into PDF</string>
    <string name="opn_img">Open Image</string>
    <string name="cnvrt">Convert</string>
    <string name="chk">Check PDF</string>
    <string name="image_scanning_folder">SP Scanner</string>
    <string name="gall">Pick from Gallery</string>
    <string name="cam">Pick from Camera</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="save_action">File has been saved successfully</string>
    <string name="post">Post</string>
    <string name="meme_button">Create a meme</string>
    <string name="create_post">Create Post</string>
    <string name="userImage">UserImage</string>
    <string name="likeImage">LikeImage</string>
    <string name="user">User</string>
    <string name="comment">comment</string>
    <string name="comment_text">Comment Text</string>
    <string name="user_image">User Image</string>
    <string name="text_comment">Comment…</string>
    <string name="search">Search</string>
    <string name="edittext">editText</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
</resources>