<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Img2PDF">

    <Button
        android:id="@+id/btn_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/styled_button"
        android:text="@string/opn_img" />


    <ImageView
        android:id="@+id/iv_image"
        android:layout_below="@id/btn_select"
        android:layout_above="@id/btn_convert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/img2pdf_content"
        />

    <Button
        android:id="@+id/btn_convert"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/styled_button"
        android:text="@string/cnvrt"
      />

</RelativeLayout>