<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentActivity"
    tools:ignore="LabelFor">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/user_image"
        />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_send_24"
        android:contentDescription="@string/user_image" />

    <EditText
        android:id="@+id/Comment"
        android:background="@drawable/shape_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/text_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        android:autofillHints="@string/userImage"
         />

    <ImageView
        android:id="@+id/postUploaderImage"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:padding="10dp"
        android:text="@string/user"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/postUploaderImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/comment_text"
        android:textSize="17sp"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/Comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>