<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_margin="16dp"
    android:background="@drawable/shape_post"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:id="@+id/userImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/userImage" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/userImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/userImage"
        android:layout_marginStart="12dp"
        android:textSize="16sp"
        android:textColor="#212121"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/createdAt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/userImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userImage"
        android:id="@+id/postTitle"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:textColor="#212121" />

    <ImageView
        android:id="@+id/likeButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintLeft_toLeftOf="@id/postTitle"
        app:layout_constraintTop_toBottomOf="@id/postTitle"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/likeImage" />

    <TextView
        android:id="@+id/likeCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/likeButton"
        app:layout_constraintTop_toTopOf="@id/likeButton"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="@id/likeButton" />

    <ImageView
        android:id="@+id/commentImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="200dp"
        android:contentDescription="@string/comment"
        app:layout_constraintBottom_toBottomOf="@+id/likeCount"
        app:layout_constraintStart_toEndOf="@+id/likeCount"
        app:layout_constraintTop_toTopOf="@+id/likeCount"
        app:srcCompat="@drawable/ic_comment" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/commentImage"
        app:layout_constraintStart_toEndOf="@+id/commentImage"
        app:layout_constraintTop_toTopOf="@+id/commentImage"
         />

</androidx.constraintlayout.widget.ConstraintLayout>

